js refactor.  encapsulated all code in IFFE

--- a/html/index.html
+++ b/html/index.html
@@ -33,7 +33,7 @@
             </div>
         </div>
             <div>
-                <a v-if="seen" id="more">load more images</a>
+                <a v-if="seen" id="more" href="">load more images</a>
             </div>
         </div>
     </div>
