added background hover to more images link

--- a/html/index.html
+++ b/html/index.html
@@ -32,8 +32,8 @@
                 </div>
             </div>
         </div>
-            <div>
-                <a v-if="seen" id="more" href="">load more images</a>
+            <div id="more" >
+                <a v-if="seen" href="">load more images</a>
             </div>
         </div>
     </div>
