updating code from dev to prod

--- a/html/index.html
+++ b/html/index.html
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="../css/index.css">
     <link href="https://fonts.googleapis.com/css?family=Francois+One" rel="stylesheet">
     <!-- development version, includes helpful console warnings -->
-    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script> -->
     <!-- production version, optimized for size and speed -->
-    <!-- <script src="https://cdn.jsdelivr.net/npm/vue"></script> -->
+    <script src="https://cdn.jsdelivr.net/npm/vue"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 </head>
 
@@ -38,8 +38,8 @@
             </div>
         </div>
     </div>
-    <script src="../js/src/index.js"></script>
-    <!-- <script src="../js/dest/index.js"></script> -->
+    <!-- <script src="../js/src/index.js"></script> -->
+    <script src="../js/dest/index.js"></script>
 </body>
 
 </html>
