updating code from dev to prod

--- a/html/index.html
+++ b/html/index.html
@@ -38,8 +38,8 @@
             </div>
         </div>
     </div>
-    <script src="../js/src/index.js"></script>
-    <!-- <script src="../js/dest/index.js"></script> -->
+    <!-- <script src="../js/src/index.js"></script> -->
+    <script src="../js/dest/index.js"></script>
 </body>
 
 </html>
